--- a/Nouri –– 1.2/sections/featured-variants.liquid
+++ b/Nouri –– 1.2/sections/featured-variants.liquid
@@ -67,7 +67,7 @@
         {% endif %}
 
         {% if block.settings.variation_id != empty %}
-        <a href="https://dailynouri.com/cart/add?id[]={{ block.settings.variation_id | escape  }}" class="pre-order-btn button-on-click-sub">choose</a>
+        <a href="https://dailynouri.com/cart/add?id[]={{ block.settings.variation_id | escape  }}" class="btn pre-order-btn button-on-click-sub">choose</a>
         {% endif %}
 
         {% if block.settings.price_per_day != empty %}
