--- a/Nouri –– 1.2/assets/theme.scss.liquid
+++ b/Nouri –– 1.2/assets/theme.scss.liquid
@@ -5311,21 +5311,57 @@ p, h1, h2, h3, h4, h5, h6 {
   }
   // mobile top banner
   #shopify-section-featured-content-with-image.index-section {
+
     .section-wrapper {
         margin: 9em 0 0 0;
         @include tablet {
           margin: 10em 0 0 0;
         }
-
     }
-    .bg-img-section>.wrapper {
-      @include tablet {
-        bottom: auto;
-        position: initial;
+    .bg-img-section {
+      
+      h1 {
+        font-weight: 600;
+        font-size: 25px;
+
+        @include tablet {
+          font-size: 2.28571em;
+        }
+
+        @include desktop {
+          font-size: 2.28571em;
+        }
+      }
+      p {
+        @include tablet {
+          font-size: 18px;
+        }
+        @include desktop {
+          font-size: 18px;
+        }
       }
       @include desktop {
-        bottom: inital;
-        position: initial;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+        > .wrapper {
+        @include tablet {
+          bottom: inherit;
+          position: initial;
+          margin: initial;
+        }
+        @include desktop {
+          bottom: inherit;
+          position: initial;
+          margin: initial;
+          width: 1100px;
+          display: flex;
+          justify-content: flex-end;
+          .page-width {
+            max-width: 350px;
+          }
+        }
       }
     }
   }
@@ -5512,24 +5548,43 @@ p, h1, h2, h3, h4, h5, h6 {
   color: #000;
   background-image: url("https://cdn.shopify.com/s/files/1/2911/8128/files/nouri-girl-holding-capsules.png?9812356265761577558");
   background-size: cover;
-  background-position: 0 8%;
+  background-position: center;
   background-repeat: no-repeat;
   margin: 0 15px;
-  padding: calc(100vw * 0.0729546) 0 40px 0;
+  padding: 80px 0 40px 0;
+
+  @include tablet {
+    background-position: 0 8%;
+    padding: calc(100vw * 0.0729546) 0 40px 0;
+  }
+
+  @include desktop {
+    background-position: 0 8%;
+    padding: calc(100vw * 0.0729546) 0 40px 0;
+  }
 
   @include at-query ($max, $medium) {
-    padding: 80px 0 40px 0;
   }
 	.grid,
 	.grid__item {
 		padding-left: 0;
 		margin: 0 auto;
   }
+  .btn {
+     background-color: transparent;
+    border: 1px solid #fff;
+  }
   .variant-header {
     height: 100vh;
     padding: 13% 0;
     line-height: 1.88;
-
+    display: none;
+    @include tablet {
+      display: block;
+    }
+    @include desktop {
+      display: block;
+    }
     .pre-order-title,
     .pre-order-subtitle {
       font-size: 17px;
