--- a/Nouri –– 1.2/assets/timber.scss.liquid
+++ b/Nouri –– 1.2/assets/timber.scss.liquid
@@ -1356,7 +1356,7 @@ html input[disabled] {
   -moz-appearance: none;
 
   /*================ Set primary button colors - can override later ================*/
-  background-color: $colorBtnPrimary;
+
   color: #000;
   @include transition(background-color 0.4s ease-out);
 
@@ -2453,7 +2453,7 @@ $socialIconFontStack: "icons";
 /*================ Module | Site Header ================*/
 .site-header {
   padding: 0;
-  height: calc(135vw * 0.0442708);
+  /*height: calc(135vw * 0.0442708);*/
   margin: 0 auto;
   vertical-align: middle;
   @include transition(all 200ms cubic-bezier(0.57,.06,.05,.95));
@@ -2464,7 +2464,7 @@ $socialIconFontStack: "icons";
   }
 
   .wrapper {
-    height: calc(135vw * 0.0442708);
+    /*height: calc(135vw * 0.0442708);*/
 
     @include at-query('', 320px, 768px) {
       height: auto;
@@ -2493,14 +2493,14 @@ $socialIconFontStack: "icons";
 
   &.sticky {
     //background: #707070;
-    height: calc(135vw * 0.0442708);
+    /*height: calc(135vw * 0.0442708);*/
 
     @include at-query($max, $medium) {
       height: 60px;
     }
 
     .wrapper {
-      height: calc(135vw * 0.0442708);
+     /* height: calc(135vw * 0.0442708);*/
 
       @include at-query($max, $medium) {
         height: 60px;
