--- a/Nouri –– 1.2/sections/institute-content.liquid
+++ b/Nouri –– 1.2/sections/institute-content.liquid
@@ -27,7 +27,7 @@
         <div class="heading">
           <p class="heading">{{ section.settings.right_column_heading }}</p>
         </div>
-        <hr>
+       
         <div class="grid content">
           <div class="grid__item medium--one-half large--one-half">
             <p>{{ section.settings.right_column_01 }}</p>
@@ -36,7 +36,7 @@
             <p>{{ section.settings.right_column_02 }}</p>
 
             <div class="underline">
-              <a class="btn" href="{{ section.settings.right_column_btn_link }}">{{ section.settings.right_column_btn_text }}</a>
+              <a class="btn" href="https://dailynouri.com/pages/contact”>{{ section.settings.right_column_btn_link }}">{{ section.settings.right_column_btn_text }}</a>
               {% include 'svg-definitions' with 'ul-get-notified' %}
             </div>
 
