initial push on repo update

--- a/nouri/sections/product-template.liquid
+++ b/nouri/sections/product-template.liquid
@@ -177,7 +177,7 @@
                 {% endcomment %}
                 <div class="product__content">
 
-                    <div class="product__content-header grid testing">
+                    <div class="product__content-header grid">
                         <div class="grid__item medium-up--three-quarters">
 
                             {% if section.settings.show_vendor %}
