--- a/nouri/snippets/image_with_text_snippet.liquid
+++ b/nouri/snippets/image_with_text_snippet.liquid
@@ -83,7 +83,7 @@
             {% endif %}
             <form action="/cart" method="post" novalidate class="cart__form">
                 <button
-                    class="btn btn--to-secondary product__add-to-cart-button{% if section.settings.enable_payment_button and current_variant.available %} shopify-payment-btn btn--secondary{% endif %}"
+                    class="testing btn btn--to-secondary product__add-to-cart-button{% if section.settings.enable_payment_button and current_variant.available %} shopify-payment-btn btn--secondary{% endif %}"
                     data-cart-submit type="submit" name="add" {% unless current_variant.available %} disabled="true" {% endunless %}
                     aria-label="{{ button_text }}">
                     <span class="primary-text" aria-hidden="false" data-cart-primary-submit-text>
