--- a/nouri/assets/theme.scss.liquid
+++ b/nouri/assets/theme.scss.liquid
@@ -39,7 +39,8 @@
 ==============================================================================*/
 
 // hide the dumb admin bar!!!
-iframe#preview-bar-iframe {
+iframe#preview-bar-iframe,
+.hide {
     display: none !important;
 }
 
